--- a/demos/modal-loading/index.html
+++ b/demos/modal-loading/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../src/jquery.sp-modal-loading.css" />
     <link rel="stylesheet" href="../../src/jquery.sp-modal-window.css" />
     <script src="../../external/jquery-2.1.3.min.js"></script>
+    <script src="../../src/jquery.sp-modal-eventable.js"></script>
     <script src="../../src/jquery.sp-modal-ui.js"></script>
     <script src="../../src/jquery.sp-modal-dialog.js"></script>
     <script src="../../src/jquery.sp-modal-loading.js"></script>
