--- a/demos/modal-window/user-interface.html
+++ b/demos/modal-window/user-interface.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../src/jquery.sp-modal-ui.css" />
     <link rel="stylesheet" href="css/user-interface.css" />
     <script src="../../external/jquery-2.1.3.min.js"></script>
+    <script src="../../src/jquery.sp-modal-eventable.js"></script>
     <script src="../../external/jquery-ui-1.11.4.min.js"></script>
     <script src="../../src/jquery.sp-modal-ui.js"></script>
     <script>
