--- a/demos/modal-message/index.html
+++ b/demos/modal-message/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Modal Window Demo</title>
+    <title>Modal Message Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="../../external/jquery-ui-1.11.4.min.css" />
-    <link rel="stylesheet" href="../../src/jquery.sp-modal-ui.css" />
-    <link rel="stylesheet" href="../../src/jquery.sp-modal-window.css" />
-    <link rel="stylesheet" href="../../src/jquery.sp-modal-message.css" />
+    <link rel="stylesheet" href="../../dist/jquery.sp-modal.min.css" />
     <script src="../../external/jquery-2.1.3.min.js"></script>
     <script src="../../external/jquery-ui-1.11.4.min.js"></script>
-    <script src="../../src/jquery.sp-modal-eventable.js"></script>
-    <script src="../../src/jquery.sp-modal-ui.js"></script>
-    <script src="../../src/jquery.sp-modal-dialog.js"></script>
-    <script src="../../src/jquery.sp-modal-message.js"></script>
-    <script src="../../src/jquery.sp-modal.js"></script>
+    <script src="../../dist/jquery.sp-modal.min.js"></script>
     <script>
         $(function () {
             var msg = new $.spModal('message', 'This is a test', 'And this is a message...');
