--- a/demos/modal-window/user-interface.html
+++ b/demos/modal-window/user-interface.html
@@ -4,13 +4,11 @@
     <title>Modal Window Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="../../external/jquery-ui-1.11.4.min.css" />
-    <link rel="stylesheet" href="../../src/jquery.sp-modal-ui.css" />
+    <link rel="stylesheet" href="../../dist/jquery.sp-modal.min.css" />
     <link rel="stylesheet" href="css/user-interface.css" />
     <script src="../../external/jquery-2.1.3.min.js"></script>
-    <script src="../../src/jquery.sp-modal-eventable.js"></script>
     <script src="../../external/jquery-ui-1.11.4.min.js"></script>
-    <script src="../../src/jquery.sp-modal-ui.js"></script>
-    <script src="../../src/jquery.sp-modal.js"></script>
+    <script src="../../dist/jquery.sp-modal.min.js"></script>
     <script>
         $(function () {
             var target = $('.user-interface');
