--- a/demos/modal-window/index.html
+++ b/demos/modal-window/index.html
@@ -3,16 +3,9 @@
 <head>
     <title>Modal Window Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="../../src/jquery.sp-modal-ui.css" />
-    <link rel="stylesheet" href="../../src/jquery.sp-modal-loading.css" />
-    <link rel="stylesheet" href="../../src/jquery.sp-modal-window.css" />
+    <link rel="stylesheet" href="../../dist/jquery.sp-modal.min.css" />
     <script src="../../external/jquery-2.1.3.min.js"></script>
-    <script src="../../src/jquery.sp-modal-eventable.js"></script>
-    <script src="../../src/jquery.sp-modal-ui.js"></script>
-    <script src="../../src/jquery.sp-modal-dialog.js"></script>
-    <script src="../../src/jquery.sp-modal-loading.js"></script>
-    <script src="../../src/jquery.sp-modal-window.js"></script>
-    <script src="../../src/jquery.sp-modal.js"></script>
+    <script src="../../dist/jquery.sp-modal.min.js"></script>
     <script>
         $(function () {
             var mw = new $.spModal(
