jQuery.ui is required

--- a/demos/modal-loading/index.html
+++ b/demos/modal-loading/index.html
@@ -3,8 +3,10 @@
 <head>
     <title>Modal Loading Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="../../external/jquery-ui-1.11.4.min.css" />
     <link rel="stylesheet" href="../../dist/jquery.sp-modal.min.css" />
     <script src="../../external/jquery-2.1.3.min.js"></script>
+    <script src="../../external/jquery-ui-1.11.4.min.js"></script>
     <script src="../../dist/jquery.sp-modal.min.js"></script>
     <script>
         $(function () {
