--- a/demos/modal-message/index.html
+++ b/demos/modal-message/index.html
@@ -10,7 +10,7 @@
     <script src="../../dist/jquery.sp-modal-0.1.0.min.js"></script>
     <script>
         $(function () {
-            var msg = new $.spModal('message', 'This is a test', 'And this is a message...');
+            var msg = $.spModal('message', 'This is a test', 'And this is a message...');
             
             // adds 'Accept' button
             var acceptBtn = msg.addButton('Accept');
