--- a/demos/modal-window/index.html
+++ b/demos/modal-window/index.html
@@ -10,7 +10,7 @@
     <script src="../../dist/jquery.sp-modal-0.1.0.min.js"></script>
     <script>
         $(function () {
-            var mw = new $.spModal(
+            var mw = $.spModal(
                 'window',
                 'user-interface.html',
                 {
