--- a/demos/modal-window/user-interface.html
+++ b/demos/modal-window/user-interface.html
@@ -12,7 +12,7 @@
     <script>
         $(function () {
             var target = $('.user-interface');
-            var ui = new $.spModal('ui', target);
+            var ui = $.spModal('ui', target);
             
             // populates data
             $('.title', target).text(ui.getParam('title'));
