--- a/demos/modal-request/index.html
+++ b/demos/modal-request/index.html
@@ -42,7 +42,7 @@
             
             // uploads multiple files
             $('#upload').click(function () {
-                $.spModal('upload', $('#file1, #file2'), 'test.php', {one: 1, two: 2, three: 3})
+                $.spModal('upload', '#file1, #file2', 'test.php', {one: 1, two: 2, three: 3})
                     .done(function (data) {
                         showMessage(data);
                     });
